# open-notebook

./: .env.example  .gitattributes  .gitignore  AGENT.md  CONTRIBUTING.md  Capability.toml  LICENSE  README.md  deny.toml
.github/workflows/: bench.yml  ci.yml  dast.yml  security.yml  signing.yml
.zap/: rules.tsv
cli/: README.md
docs/: PRD.md  threat-model.md  ui-mocks.md
docs/adr/: ADR-001-notebook-format.md  ADR-002-crdt-framework.md  ADR-003-kernel-architecture.md  ADR-004-orchestration-language.md  ADR-005-licensing.md  ADR-006-sql-engine.md  ADR-007-ai-copilot-architecture.md  ADR-008-r-kernel-ark.md  ADR-009-content-addressed-caching.md  ADR-010-git-diffable-text-format.md
docs/api/: openapi.yaml
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  styles.css  types.test.ts  types.ts
frontend/src/components/: AiChat.tsx  AiPanel.tsx  CellEditor.tsx  CellOutput.tsx  NotebookCell.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Dashboard.tsx
kernel/: Cargo.toml  Cargo.toml.new  build.rs
kernel/.cargo/: config.toml
kernel/benches/: dag.rs  format.rs
kernel/examples/: duckdb_test.rs
kernel/fuzz/: Cargo.toml
kernel/fuzz/fuzz_targets/: dag.rs  format.rs
kernel/src/: io.rs  lib.rs  main.rs  opennotebook.v1.rs
kernel/src/ai/: mod.rs  prompts.rs
kernel/src/dag/: graph.rs  mod.rs  scheduler.rs  variable_table.rs
kernel/src/execution/: cache.rs  mod.rs  python.rs  sql.rs
kernel/src/mcp/: mod.rs
kernel/src/notebook/: diff.rs  format.rs  mod.rs  types.rs
kernel/src/server/: mod.rs
kernel/tests/: integration.rs
proto/: onb.proto
scripts/: dev.sh  release.sh
server/: go.mod
server/cmd/server/: main.go
server/internal/handler/: ai.go  events.go  handler_test.go  health.go  kernel.go  mcp.go  notebook.go  stream.go
server/internal/kernel/: client.go  client_test.go
server/internal/notebook/: store.go  store_test.go
